--- a/catalog.html
+++ b/catalog.html
@@ -20,11 +20,11 @@
 						<li class="submenu-entrance">
 							<a class="menu-link current"><span class="underlined-main">Каталог</span></a>
 							<ul class="submenu">
-								<li><a class="submenu-link separated" href="#">Новинки</a></li>						
-								<li><a class="submenu-link current" href="catalog.html">Сливочное</a></li>	
-								<li><a class="submenu-link" href="#">Щербеты</a></li>	
-								<li><a class="submenu-link" href="#">Фруктовый лед</a></li>	
-								<li><a class="submenu-link" href="#">Мелорин</a></li>									
+								<li class="submenu-item"><a class="submenu-link separated" href="#">Новинки</a></li>						
+								<li class="submenu-item"><a class="submenu-link current" href="catalog.html">Сливочное</a></li>	
+								<li class="submenu-item"><a class="submenu-link" href="#">Щербеты</a></li>	
+								<li class="submenu-item"><a class="submenu-link" href="#">Фруктовый лед</a></li>	
+								<li class="submenu-item"><a class="submenu-link" href="#">Мелорин</a></li>									
 							</ul>							
 						</li>
 						<li><a class="menu-link" href="delivery.html"><span class="underlined-main">Доставка и оплата</span></a></li>
@@ -47,7 +47,7 @@
 								<label class="visually-hidden" for="id-entrance-password">Пароль</label>
 								<input class="form-entrance-password gllacy-field" type="password" id="id-entrance-password" placeholder="Пароль" title="Введите пароль" required>								
 								<div class="form-entrance-controls">
-									<button class="form-entrance-button btn btn-red btn-normal inline-link on-white-back" type="submit" title="Выполнить вход">Войти</button>
+									<button class="form-entrance-button btn btn-red btn-normal" type="submit" title="Выполнить вход">Войти</button>
 									<div class="form-entrance-link-wrapper vertical">
 										<a class="form-entrance-link" href="#" title="Восстановление забытого пароля">Забыли пароль</a>
 										<a class="form-entrance-link" href="#" title="Новая регистрация">Новая регистрация</a>							
@@ -90,23 +90,25 @@
 									</tr>							
 								</table>
 								<p class="form-basket-total">Итого: 750 руб</p>
-								<button class="form-basket-btn btn btn-red btn-normal inline-link on-white-back" type="submit" id="id-basket-submit" title="Оформить заказ по содержимому корзины">Оформить заказ</button>					
+								<button class="form-basket-btn btn btn-red btn-normal" type="submit" id="id-basket-submit" title="Оформить заказ по содержимому корзины">Оформить заказ</button>					
 							</form>			
 						</li>
 					</ul>
 				</nav>
+				
+				<div class="page-catalog-design-wrapper"> <!--Дизайнер нарисовал 2 блока на одной высоте, но если вырвать адрес из потока, персональное меню может не пройти проверку переполнения при добавлении в него пунктов. Т.к. отрицательные margin и т.д. тоже запрещены, то доп. обертка.-->
+					<div class="header-info page-catalog-header-info">
+						<h2 class="visually-hidden">Часы работы и телефон для связи</h2>	
+						<p>c 10 до 20, ежедневно</p>
+						<p>8 812 450-25-25</p>
+					</div>	
 
-				<div class="header-info">
-					<h2 class="visually-hidden">Часы работы и телефон для связи</h2>	
-					<p>c 10 до 20, ежедневно</p>
-					<p>8 812 450-25-25</p>
-				</div>	
-
-				<ul class="breadcrumbs">
-					<li class="breadcrumbs-item"><a class="breadcrumbs-link inline-link" href="index.html">Главная</a></li>
-					<li class="breadcrumbs-item"><a class="breadcrumbs-link inline-link" href="#">Каталог</a></li>
-					<li class="breadcrumbs-item"><a class="breadcrumbs-link inline-link current">Сливочное</a></li>
-				</ul>
+					<ul class="breadcrumbs">
+						<li class="breadcrumbs-item"><a class="breadcrumbs-link inline-link" href="index.html">Главная</a></li>
+						<li class="breadcrumbs-item"><a class="breadcrumbs-link inline-link" href="#">Каталог</a></li>
+						<li class="breadcrumbs-item"><a class="breadcrumbs-link inline-link current">Сливочное</a></li>
+					</ul>
+				</div>
 				<h1 class="page-catalog-title">Сливочное мороженое</h1>	
 
 			</header>		
@@ -134,7 +136,7 @@
 
 							<div class="range-controls">
 								<div class="scale">
-									<div class="bar" style="margin-left: 10%; width: 50%"></div>
+									<div class="bar"</div>
 								</div>
 								<div class="toggle toggle-min"></div>
 								<div class="toggle toggle-max"></div>
@@ -215,7 +217,7 @@
 							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>			
-						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 					</li>
 					<li class="catalog-item">						
 						<p class="catalog-item-img-wrapper">
@@ -227,7 +229,7 @@
 							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочное-кофейное с кусочками шоколада</a></p>
-						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 					</li>
 					<li class="catalog-item">					
 						<p class="catalog-item-img-wrapper">
@@ -239,7 +241,7 @@
 							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
-						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 					</li>
 					<li class="catalog-item">					
 						<p class="catalog-item-img-wrapper">
@@ -251,7 +253,7 @@
 							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочное крем-брюле с карамельной подливкой</a></p>
-						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 					</li>
 
 					<li class="catalog-item">					
@@ -259,48 +261,48 @@
 							<img class="catalog-item-img"  src="img/5.jpg" width="267" height="267" alt="Фото: мороженое >Сливочное с брусничным джемом">		
 						</p>					
 						<p class="catalog-item-price">
-							<span class="catalog-item-price-cost">310</span>
+							<span class="catalog-item-price-cost">325</span>
 							<span class="catalog-item-price-currency"></span>		
 							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочное с брусничным джемом</a></p>			
-						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 					</li>
 					<li class="catalog-item">					
 						<p class="catalog-item-img-wrapper">
 							<img class="catalog-item-img"  src="img/6.jpg" width="267" height="267" alt="Фото: мороженое Сливочно-черничное с цельными ягодами черники">	
 						</p>					
 						<p class="catalog-item-price">
-							<span class="catalog-item-price-cost">380</span>
+							<span class="catalog-item-price-cost">410</span>
 							<span class="catalog-item-price-currency"></span>						
 							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочно-черничное с цельными ягодами черники</a></p>
-						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 					</li>
 					<li class="catalog-item">					
 						<p class="catalog-item-img-wrapper">
 							<img class="catalog-item-img"  src="img/7.jpg" width="267" height="267" alt="Фото: мороженое Сливочно-лимонное с карамельной присыпкой">	
 						</p>				
 						<p class="catalog-item-price">
-							<span class="catalog-item-price-cost">355</span>
+							<span class="catalog-item-price-cost">375</span>
 							<span class="catalog-item-price-currency"></span>						
 							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочно-лимонное с карамельной присыпкой</a></p>
-						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 					</li>
 					<li class="catalog-item">					
 						<p class="catalog-item-img-wrapper">
 							<img class="catalog-item-img" src="img/8.jpg" width="267" height="267" alt="Фото: мороженое Сливочное с шоколадной стружкой">				
 						</p>	
 						<p class="catalog-item-price">
-							<span class="catalog-item-price-cost">415</span>
+							<span class="catalog-item-price-cost">320</span>
 							<span class="catalog-item-price-currency"></span>						
 							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочное с шоколадной стружкой</a></p>
-						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 					</li>
 
 					<li class="catalog-item">					
@@ -308,24 +310,24 @@
 							<img class="catalog-item-img" width="267" height="267"  src="img/9.jpg" alt="Фото: мороженое Сливочно-ванильное с кусочками шоколада">					
 						</p>	
 						<p class="catalog-item-price">
-							<span class="catalog-item-price-cost">310</span>
+							<span class="catalog-item-price-cost">440</span>
 							<span class="catalog-item-price-currency"></span>		
 							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочно-ванильное с кусочками шоколада</a></p>			
-						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 					</li>
 					<li class="catalog-item">					
 						<p class="catalog-item-img-wrapper">
 							<img class="catalog-item-img"  src="img/10.jpg" width="267" height="267" alt="Фото: мороженое Сливочноe с ментоловым сиропом">					
 						</p>	
 						<p class="catalog-item-price">
-							<span class="catalog-item-price-cost">380</span>
+							<span class="catalog-item-price-cost">435</span>
 							<span class="catalog-item-price-currency"></span>						
 							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочноe с ментоловым сиропом</a></p>
-						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 					</li>
 					<li class="catalog-item">					
 						<p class="catalog-item-img-wrapper">
@@ -337,31 +339,31 @@
 							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочное с кусочками черного шоколада</a></p>
-						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 					</li>
 					<li class="catalog-item">					
 						<p class="catalog-item-img-wrapper">
 							<img class="catalog-item-img" src="img/12.jpg" width="267" height="267" alt="Фото: мороженое Сливочноe с мятным сиропом">				
 						</p>	
 						<p class="catalog-item-price">
-							<span class="catalog-item-price-cost">415</span>
+							<span class="catalog-item-price-cost">420</span>
 							<span class="catalog-item-price-currency"></span>						
 							<span class="catalog-item-price-unit">/кг</span>
 						</p>
 						<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочноe с мятным сиропом</a></p>
-						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+						<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 					</li>
 				</ul>	
 			</section>
 
 			<ul class="pagination outer-paddingator">
-				<li><a class="pagination-link inline-link pagination-link-previous link-disabled">&#8249;</a></li>
+				<li><a class="pagination-link inline-link pagination-link-previous link-disabled">&lt;</a></li>
 				<li><a class="pagination-link inline-link current">1</a></li>
 				<li><a class="pagination-link inline-link" href="#">2</a></li>
 				<li><a class="pagination-link inline-link" href="#">3</a></li>
 				<li><a class="pagination-link inline-link" href="#">4</a></li>
 				<li><a class="pagination-link inline-link" href="#">5</a></li>
-				<li><a class="pagination-link inline-link pagination-link-next" href="#">&#8250;</a></li>
+				<li><a class="pagination-link inline-link pagination-link-next" href="#">&gt;</a></li>
 			</ul>	
 
 			<footer class="footer inner-marginator">
