--- a/index.html
+++ b/index.html
@@ -22,13 +22,13 @@
 
 						<ul class="main-menu">
 							<li class="submenu-entrance">
-								<a class="menu-link submenu-entrance" href="catalog.html"><span class="underlined-main">Каталог</span></a>
+								<a class="menu-link" href="catalog.html"><span class="underlined-main">Каталог</span></a>
 								<ul class="submenu">
-									<li><a class="submenu-link separated" href="#">Новинки</a></li>						
-									<li><a class="submenu-link" href="catalog.html">Сливочное</a></li>	
-									<li><a class="submenu-link" href="#">Щербеты</a></li>	
-									<li><a class="submenu-link" href="#">Фруктовый лед</a></li>	
-									<li><a class="submenu-link" href="#">Мелорин</a></li>									
+									<li class="submenu-item"><a class="submenu-link separated" href="#">Новинки</a></li>						
+									<li class="submenu-item"><a class="submenu-link" href="catalog.html">Сливочное</a></li>	
+									<li class="submenu-item"><a class="submenu-link" href="#">Щербеты</a></li>	
+									<li class="submenu-item"><a class="submenu-link" href="#">Фруктовый лед</a></li>	
+									<li class="submenu-item"><a class="submenu-link" href="#">Мелорин</a></li>									
 								</ul>								
 							</li>
 							<li>
@@ -56,7 +56,7 @@
 									<label class="visually-hidden" for="id-entrance-password">Пароль</label>
 									<input class="form-entrance-password gllacy-field" type="password" id="id-entrance-password" placeholder="Пароль" title="Введите пароль" required>	
 									<div class="form-entrance-controls">
-										<button class="form-entrance-button btn btn-red btn-normal inline-link on-white-back" type="submit" title="Выполнить вход">Войти</button>
+										<button class="form-entrance-button btn btn-red btn-normal" type="submit" title="Выполнить вход">Войти</button>
 										<div class="form-entrance-link-wrapper vertical">
 											<a class="form-entrance-link" href="#" title="Восстановление забытого пароля">Забыли пароль</a>
 											<a class="form-entrance-link" href="#" title="Новая регистрация">Новая регистрация</a>							
@@ -75,36 +75,36 @@
 						<p>c 10 до 20, ежедневно</p>
 						<p>8 812 450-25-25</p>		
 					</div>
-
-					<ul class="slider-items">
-						<li class="slider-item slide" id="li-slide-1">
-							<h3 class="slide-title">
-								Крем-брюле и пломбир с малиновым джемом
-							</h3>
-							<a class="slide-btn btn btn-red btn-large btn-white-text" href="#">Давайте оба!</a>
-						</li>
-						<li class="slider-item slide" id="li-slide-2">
-							<h3 class="slide-title">
-								Шоколадный пломбир и лимонный сорбет
-							</h3>
-							<a class="slide-btn btn btn-red btn-large btn-white-text" href="#">Давайте оба!</a>
-						</li>
-						<li class="slider-item slide" id="li-slide-3">
-							<h3 class="slide-title">
-								Пломбир с помадкой и клубничный щербет
-							</h3>
-							<a class="slide-btn btn btn-red btn-large btn-white-text" href="#">Давайте оба!</a>
-						</li>
-					</ul>	
-
+					
+					<section class="slider">
+						<h2 class="visually-hidden">Переключение декоративного слайдера</h2>
+						<ul class="slider-items">
+							<li class="slider-item slide" id="li-slide-1">
+								<h3 class="slide-title">
+									Крем-брюле и пломбир с малиновым джемом
+								</h3>
+								<a class="slide-btn btn btn-red btn-large" href="#">Давайте оба!</a>
+							</li>
+							<li class="slider-item slide" id="li-slide-2">
+								<h3 class="slide-title">
+									Шоколадный пломбир и лимонный сорбет
+								</h3>
+								<a class="slide-btn btn btn-red btn-large" href="#">Давайте оба!</a>
+							</li>
+							<li class="slider-item slide" id="li-slide-3">
+								<h3 class="slide-title">
+									Пломбир с помадкой и клубничный щербет
+								</h3>
+								<a class="slide-btn btn btn-red btn-large" href="#">Давайте оба!</a>
+							</li>
+						</ul>	
+						<div class="slider-controls">
+							<label class="slider-button slider-button-1" for="id-slide-1" title="Слайд-1"><span class="visually-hidden">Слайд-1</span></label>
+							<label class="slider-button slider-button-2" for="id-slide-2" title="Слайд-2"><span class="visually-hidden">Слайд-2</span></label>
+							<label class="slider-button slider-button-3" for="id-slide-3" title="Слайд-3"><span class="visually-hidden">Слайд-3</span></label>
+						</div>
+					</section>
 				</header>
-
-				<div class="slider-controls outer-paddingator">			
-					<h2 class="visually-hidden">Переключение декоративного слайдера</h2>
-					<label class="slider-button slider-button-1" for="id-slide-1" title="Слайд-1"><span class="visually-hidden">Слайд-1</span></label>
-					<label class="slider-button slider-button-2" for="id-slide-2" title="Слайд-2"><span class="visually-hidden">Слайд-2</span></label>
-					<label class="slider-button slider-button-3" for="id-slide-3" title="Слайд-3"><span class="visually-hidden">Слайд-3</span></label>
-				</div>	
 
 				<section class="promo inner-marginator">			
 					<h2 class="visually-hidden">Акции</h2>
@@ -112,12 +112,12 @@
 						<li class="promo-item">
 							<b class="promo-item-title">Малинка даром!</b>
 							<p class="promo-item-text">При покупке 2 кг любого фруктового мороженого, добавим в ваш заказ банку малинового варенья бесплатно.</p>
-							<a class="promo-item-button btn btn-red btn-normal btn-white-text" href="#">Хочу варенье!</a>
+							<a class="promo-item-button btn btn-red btn-normal" href="#">Хочу варенье!</a>
 						</li>
 						<li class="promo-item">
 							<b class="promo-item-title">Шоколадка даром</b>
 							<p class="promo-item-text">При покупке 2 кг пломбира, добавим в ваш заказ упаковку вкуснейшей шоколадной присыпки совершенно бесплатно.</p>
-							<a class="promo-item-button btn btn-red btn-normal btn-white-text" href="#">Хочу шоколадки!</a>
+							<a class="promo-item-button btn btn-red btn-normal" href="#">Хочу шоколадки!</a>
 						</li>
 					</ul>
 				</section>
@@ -126,7 +126,7 @@
 					<h2 class="catalog-title visually-hidden">Каталог. Хиты.</h2>	
 					<ul class="catalog-items">
 						<li class="catalog-item hit">
-							<p class="catalog-item-img-wrapper">
+							<p class="catalog-item-img-wrapper"> <!--обертка создана из-за различного поведения элементов каталога в разных браузерах при отсутствии изображения+наличии глобального тега img, удачно предотвращающего искажения от сжатия при "резиновости" с 1200 до 900px -->
 								<img class="catalog-item-img"  src="img/1.jpg" width="267" height="267" alt="Фото: мороженое Сливочное с апельсиновым джемом">									
 							</p>
 							<p class="catalog-item-price">
@@ -135,7 +135,7 @@
 								<span class="catalog-item-price-unit">/ кг</span>
 							</p>
 							<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочное с апельсиновым джемом и цитрусовой стружкой</a></p>			
-							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 						</li>
 						<li class="catalog-item hit">
 							<p class="catalog-item-img-wrapper">
@@ -147,7 +147,7 @@
 								<span class="catalog-item-price-unit">/кг</span>
 							</p>
 							<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочно-кофейное с кусочками шоколада</a></p>
-							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 						</li>
 						<li class="catalog-item hit">
 							<p class="catalog-item-img-wrapper">
@@ -159,7 +159,7 @@
 								<span class="catalog-item-price-unit">/кг</span>
 							</p>
 							<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочно-клубничное с присыпкой из белого шоколада</a></p>
-							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 						</li>
 						<li class="catalog-item hit">
 							<p class="catalog-item-img-wrapper">
@@ -171,23 +171,23 @@
 								<span class="catalog-item-price-unit">/кг</span>
 							</p>
 							<p class="catalog-item-name"><a class="on-dark" href="catalog-item.html">Сливочное крем-брюле с карамельной подливкой</a></p>
-							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden btn-white-text" href="quick-view.html">Быстрый просмотр</a>
+							<a class="catalog-item-btn btn btn-red btn-normal btn-hidden" href="quick-view.html">Быстрый просмотр</a>
 						</li>
 					</ul>	
 				</section>
 
-				<div class="about outer-paddingator">
-					<section class="about-content">					
-						<h2 class="about-title">Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>					
-						<ul class="about-items">
-							<li class="about-item">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
-							<li class="about-item">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
-							<li class="about-item">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>					
-							<li class="about-item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
-						</ul>		
-					</section>	
-				</div>
+			
+				<section class="about inner-marginator">					
+					<h2 class="about-title">Магазин Глэйси - это онлайн- и офлайн-магазин по продаже мороженого собственного производства на развес</h2>					
+					<ul class="about-items">
+						<li class="about-item">Все наше мороженое изготавливается на собственном производстве, с использованием современного оборудования и проверенных временем технологий.</li>
+						<li class="about-item">Закупка ингредиентов  производится только у проверенных фермерских хозяйств и компаний, с которыми нас связывает долговременное сотрудничество.</li>
+						<li class="about-item">Для приготовления мороженого используются настоящие сливки и молоко высочайшего качества. Все дополнительные ингредиенты и добавки произведены из натурального, экологически чистого сырья.</li>					
+						<li class="about-item">Доставка нашего мороженого до заказчиков осуществляется в специальном термопаке, который не дает мороженому растаять в пути и позволяет сохранить превосходный вкус.</li>
+					</ul>	
+				</section>	
 
+			
 				<div class="other inner-marginator">	
 					<article class="other-item-new other-item">				
 						<h2 class="other-item-new-title">Новое в нашем блоге</h2>
@@ -216,26 +216,25 @@
 							<span>19/8, Санкт-Петербург</span>
 						</p>	
 						<p class="map-info-p">Для заказов по телефону:</p>
-						<p class="map-info-p-bold">8 812 450-25-25</p>
-						<p class="map-info-p">(c 10 до 20, ежедневно)</p>		
+						<p class="map-info-p-bold">8 812 450-25-25
+							<span class="perfect-pixel">(c 10 до 20, ежедневно)</span>
+						</p>		
 						<a class="map-info-feedback btn btn-red btn-normal" href="feedback.html">Форма обратной связи</a>
 					</div>			
 				</div> 
 				<div>
-					<a class="map-link" href="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" target="_blank"  title="Для переключения между обычной и интерактивной картой - двойной щелчок мыши. Перемещать и масштабировать карту возможно за пределами ширины контентной области.">
-						<img class="map-img" src="img/map.jpg" width="1200" height="430" alt="Наш магазин на карте (г.Санкт-Петербург, Ул. Большая Конюшенная, 19-8)">
-					</a>	
-					<iframe  class="map-iframe map-iframe-hide" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="1200" height="430" allowfullscreen></iframe>
+					<img class="map-img map-link map-hide" src="img/map.jpg" width="1200" height="430" alt="Наш магазин на карте (г.Санкт-Петербург, Ул. Большая Конюшенная, 19-8)"title="Для переключения между обычной и интерактивной картой - двойной щелчок мыши Перемещать и масштабировать карту возможно за пределами ширины контентной области.">				 
+					<iframe  class="map-iframe map-link map-show" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037999040354!2d30.322010416394033!3d59.938716271971415!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2sBolshaya+Konyushennaya+ul.%2C+19%2C+Sankt-Peterburg%2C+Russia%2C+191186!5e0!3m2!1sen!2s!4v1441888483426" width="1200" height="430" title="Для переключения между обычной и интерактивной картой - двойной щелчок мыши Перемещать и масштабировать карту возможно за пределами ширины контентной области." allowfullscreen></iframe>
 				</div>
 			</section>
 
 			<div class="gllacy-wrapper">
 				<footer class="footer inner-marginator">
 					<ul class="footer-part footer-social">
-						<li><a class="social-item social-item-tw inline-link" href="#" title="Twitter"><span class="visually-hidden">Twitter</span></a></li>
-						<li><a class="social-item social-item-in inline-link" href="#" title="Instagram"><span class="visually-hidden">Instagram</span></a></li>
-						<li><a class="social-item social-item-fb inline-link" href="#" title="Facebook"><span class="visually-hidden">Facebook</span></a></li>
-						<li><a class="social-item social-item-vk inline-link" href="#" title="В контакте"><span class="visually-hidden">В контакте</span></a></li>
+						<li><a class="social-item social-item-tw" href="#" title="Twitter"><span class="visually-hidden">Twitter</span></a></li>
+						<li><a class="social-item social-item-in" href="#" title="Instagram"><span class="visually-hidden">Instagram</span></a></li>
+						<li><a class="social-item social-item-fb" href="#" title="Facebook"><span class="visually-hidden">Facebook</span></a></li>
+						<li><a class="social-item social-item-vk" href="#" title="В контакте"><span class="visually-hidden">В контакте</span></a></li>
 					</ul>					
 					<div class="footer-part footer-center"> 
 						<ul class="footer-menu">
@@ -263,7 +262,7 @@
 
 		<form class="form-feedback gllacy-form gllacy-flex-hide" id="id-form-feedback"  method="post" action="https://echo.htmlacademy.ru">
 			<h2 class="visually-hidden">Форма обратной связи</h2>
-			<button class="form-feedback-close btn-close" type="button" title="Закрыть форму обратной связи">
+			<button class="form-feedback-close btn-close-large" type="button" title="Закрыть форму обратной связи">
 				<span class="visually-hidden">Закрыть</span>			
 			</button>
 			<p class="form-feedback-title">Мы обязательно Вам ответим!</p>
@@ -272,8 +271,8 @@
 			<label class="visually-hidden" for="id-feedback-email">Адрес электронной почты</label>
 			<input class="form-feedback-email form-feedback-item gllacy-field" type="email" id="id-feedback-email" placeholder="Ваша почта для ответа?" title="Введите адрес электронной почты" required>		
 			<label class="visually-hidden" for="id-feedback-text">Ваше сообщение</label>
-			<textarea class="form-feedback-text  form-feedback-item gllacy-field" id="id-feedback-text" rows="8" placeholder="Напишите что-нибудь..." title="Введите текст Вашего сообщения" required></textarea>
-			<button class="form-feedback-button btn btn-red btn-normal inline-link" type="submit" title="Отправить сообщение">Отправить</button>
+			<textarea class="form-feedback-text form-feedback-item gllacy-textarea" id="id-feedback-text" rows="8" placeholder="Напишите что-нибудь..." title="Введите текст Вашего сообщения" required></textarea>
+			<button class="form-feedback-button btn btn-red btn-normal" type="submit" title="Отправить сообщение">Отправить</button>
 		</form>	
 		<script src="js/script.js"></script>
 	</body>
