--- a/catalog.html
+++ b/catalog.html
@@ -136,7 +136,7 @@
 
 							<div class="range-controls">
 								<div class="scale">
-									<div class="bar"</div>
+									<div class="bar"></div>
 								</div>
 								<div class="toggle toggle-min"></div>
 								<div class="toggle toggle-max"></div>
